# circuits-com

./: .gitignore  CLAUDE.md  README.md  REVENIUM_ISSUES.txt  deploy.sh  docker-compose.prod.yml  docker-compose.yml  llms.txt  pyrightconfig.json
api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_admin_dashboard.py  003_add_supplier_contact_name.py  004_add_message_table.py  005_widen_category_icon.py  006_add_part_sub_slug.py  007_add_page_views.py  008_add_part_slug.py  009_add_category_description.py  010_add_sponsor_amount_status.py  011_add_sponsor_rep_fields.py  011_sponsorship_single_source.py  012_add_part_query_indexes.py  013_sponsor_tier_matrix.py  014_supplier_board_fields.py  015_add_user_email.py  016_sponsor_single_slot_uniqueness.py  017_widen_image_columns_to_text.py  018_add_sponsor_brand_colors.py
api/app/: admin.py  config.py  main.py
api/app/db/: seed.py  session.py
api/app/models/: __init__.py  category.py  message.py  page_view.py  part.py  part_listing.py  revenue.py  sponsor.py  supplier.py  user.py
api/app/routes/: admin_category_suppliers.py  admin_messages.py  admin_sponsors.py  analytics.py  auth.py  categories.py  dashboard.py  forms.py  parts.py  search.py  sitemap.py  sponsor_rep_requests.py  sponsors.py  suppliers.py
api/app/schemas/: __init__.py  (+6 more)
api/tests/: conftest.py  test_admin_category_suppliers.py  test_admin_message_reltime_anchor.py  test_admin_messages.py  test_admin_sponsors.py  test_admin_sponsors_featured.py  test_analytics.py  test_auth.py  test_auth_recovery.py  test_auth_tokens.py  test_board_schemas.py  test_cache_headers.py  test_categories.py  test_categories_featured_suppliers_list.py  test_category_hierarchy.py  test_category_partners.py  test_category_size_tripwire.py  test_category_supplier_rollup.py  test_category_top_sponsors_field.py  test_dashboard.py  test_email_recovery.py  test_email_service.py  test_forms.py  test_image_column_widening.py  test_image_url_validation.py  test_login_isoboard_mobile.py  test_login_isoboard_perf.py  test_login_keyframes_global.py  test_mobile_chip_legibility.py  test_models.py  test_nginx_cache_headers.py  test_nginx_gzip.py  test_no_smtp_credential_lookalikes.py  test_no_type_url_form_input.py  test_part_indexes.py  test_partners_brand_colors.py  test_parts.py  test_search.py  test_seed_admin_users.py  test_sitemap.py  (+14 more)
scripts/revenium/: .env.example  README.md  cto-feedback.md  customers.yaml  probe_result.json  products.yaml  pyproject.toml  pyrightconfig.json
tests/visual/: conftest.py  pyproject.toml
(+508 files in other folders)
